fix(button): increase contrast (#666)

--- a/components/button/server.css
+++ b/components/button/server.css
@@ -34,7 +34,7 @@
     background-color: light-dark(var(--color-black), var(--color-white));
 
     &:hover {
-      background-color: light-dark(var(--color-gray-20), var(--color-gray-80));
+      background-color: light-dark(var(--color-gray-40), var(--color-gray-60));
     }
 
     &[data-action="positive"] {
@@ -68,16 +68,16 @@
     border-color: currentcolor;
 
     &:hover {
-      background-color: light-dark(var(--color-gray-80), var(--color-gray-20));
+      background-color: light-dark(var(--color-gray-80), var(--color-gray-40));
     }
 
     &[data-action="positive"] {
-      color: light-dark(var(--color-green-50), var(--color-green-80));
+      color: light-dark(var(--color-green-20), var(--color-green-80));
 
       &:hover {
         background-color: light-dark(
           var(--color-green-90),
-          var(--color-green-10)
+          var(--color-green-20)
         );
       }
     }
@@ -86,6 +86,7 @@
       color: light-dark(var(--color-red-50), var(--color-red-80));
 
       &:hover {
+        color: light-dark(var(--color-red-20), var(--color-red-80));
         background-color: light-dark(var(--color-red-90), var(--color-red-10));
       }
     }
@@ -95,16 +96,16 @@
 
   &[data-variant="plain"] {
     &:hover {
-      background-color: light-dark(var(--color-gray-80), var(--color-gray-20));
+      background-color: light-dark(var(--color-gray-80), var(--color-gray-40));
     }
 
     &[data-action="positive"] {
-      color: light-dark(var(--color-green-50), var(--color-green-80));
+      color: light-dark(var(--color-green-20), var(--color-green-80));
 
       &:hover {
         background-color: light-dark(
           var(--color-green-90),
-          var(--color-green-10)
+          var(--color-green-20)
         );
       }
     }
@@ -113,6 +114,7 @@
       color: light-dark(var(--color-red-50), var(--color-red-80));
 
       &:hover {
+        color: light-dark(var(--color-red-20), var(--color-red-80));
         background-color: light-dark(var(--color-red-90), var(--color-red-10));
       }
     }
